adição da fonte no html

--- a/style/pagamento-e-dados.css
+++ b/style/pagamento-e-dados.css
@@ -1,4 +1,10 @@
+@font-face { /* FONTE EXTERNA */
+    font-family:'jomhuria';
+    src: url(../fonts/Jomhuria-Regular.ttf);
+}
+
 html {
+    font-family: 'jomhuria';
     background-color: rgb(250, 219, 184);
 
 }
