--- a/style/home.css
+++ b/style/home.css
@@ -1,7 +1,10 @@
+
+
 html{
     background-image: url('/img/fundo-home.webp');
     background-repeat: no-repeat;
     background-size: cover;
+ 
 }
 
 nav a{
@@ -40,10 +43,9 @@ nav{
 }
 
 #logo{
-    display: flex;
+    max-width: 100%;
     width: 15%;
-    position: relative;
-    left: 42.5%;
+    height: auto;
 }
 
 h1{
@@ -58,3 +60,62 @@ h2{
     font-size: xx-large;
 }
 
+/*======================Sobre Nós===========================*/
+
+#logoGeral{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#logoo{
+    max-width: 100%;
+    width: 10%;
+    height: auto;
+}
+
+
+
+#fotos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 0%;
+}
+
+figure {
+    text-align: center;     /* Centraliza a legenda */
+  }
+  
+
+img{
+    width: 13rem;
+    border-radius: 50%;
+    height: auto;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.2); 
+    
+}
+
+legend{
+    font-size: large;
+    color: #56331f;
+}
+
+#voltar{
+    font-size: x-large;
+    margin-top: 10%;
+    margin: 1%;
+    
+}
+
+#projeto{
+    color: #f0ca9d;
+    
+}
+
+p{
+    text-align: center;
+    font-size: larger;
+    color: #f0ca9d;
+}
