--- a/style/produto.css
+++ b/style/produto.css
@@ -13,7 +13,7 @@
 }
 
 #img-produto{
-    width: 65%;
+    width: 35rem;
     height: 35rem;
     border-radius: 5% ;
     background-color: rgb(137, 85, 57);
@@ -41,3 +41,14 @@
     text-wrap: nowrap;
     font-family: 'jomhuria';
 }
+#dados-produto{
+    width: 35%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 4.8rem 3.6rem;
+
+}
+
