--- a/style/produto.css
+++ b/style/produto.css
@@ -41,7 +41,7 @@
     text-wrap: nowrap;
     font-family: 'jomhuria';
 }
-#dados-produto{
+#dados-produtos{
     width: 35%;
     height: 100%;
     display: flex;
@@ -49,6 +49,31 @@
     flex-direction: column;
     text-align: center;
     padding: 4.8rem 3.6rem;
+    gap: 3rem;
 
 }
+.dados-produto{
+    width: 70%;
+    border-radius: 15px;
+    padding: 2rem;
+    text-align: start;
+    background-color: rgb(137, 85, 57);
+    
+}
 
+
+p{
+    color: #F5D1A6;
+    margin: 0;
+    height: auto;
+    font-size: 3.5rem;
+}
+
+
+#nome-produto{
+    font-size: 4.5rem;
+    color: rgb(137, 85, 57);
+    margin: 0;
+
+    
+}
