pop up categoria

--- a/style/principal.css
+++ b/style/principal.css
@@ -33,3 +33,49 @@ p {
 a {
     text-decoration: none;
 }
+
+#categoria{
+    position: relative;
+    top:-1.7dvh;
+    right: 2dvh;
+}
+
+#texto{
+    position: relative;
+    right: 1dvh;
+    height: 10.5%;
+}
+
+
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 2vh;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
